@@ -46,6 +46,10 @@ Release 0.20.0 - Unreleased
                (Toby White via Andrew Purtell)
    HBASE-1180  Add missing import statements to SampleUploader and remove
                unnecessary @Overrides (Ryan Smith via Andrew Purtell)
+   HBASE-1191  ZooKeeper ensureParentExists calls fail 
+               on absolute path (via Nitay Joffe)
+   HBASE-1187  After disabling/enabling a table, the regions seems to 
+               be assigned to only 1-2 region servers
 
 Release 0.19.0 - 01/21/2009
   INCOMPATIBLE CHANGES
